@@ -1,18 +1,0 @@
-// Jest Snapshot v1, https://goo.gl/fbAQLP
-
-exports[`InlinePanel should allow inserting a new form and calling an onAdd function 1`] = `
-"
-<form>
-    <input name="person_cafe_relationship-TOTAL_FORMS" value="1" id="id_person_cafe_relationship-TOTAL_FORMS" type="hidden">
-    <input name="person_cafe_relationship-INITIAL_FORMS" value="0" id="id_person_cafe_relationship-INITIAL_FORMS" type="hidden">
-    <input name="person_cafe_relationship-MIN_NUM_FORMS" value="1" id="id_person_cafe_relationship-MIN_NUM_FORMS" type="hidden">
-    <input name="person_cafe_relationship-MAX_NUM_FORMS" value="5" id="id_person_cafe_relationship-MAX_NUM_FORMS" type="hidden">
-    <div id="id_person_cafe_relationship-FORMS">
-        <p id="person_cafe_relationship-0">form for inline child</p>
-    </div>
-    <template id="id_person_cafe_relationship-EMPTY_FORM_TEMPLATE">
-        <p id="person_cafe_relationship-__prefix__">form for inline child</p>
-    </template>
-    <button type="button" id="id_person_cafe_relationship-ADD">Add item</button>
-</form>"
-`;
