@@ -53,6 +53,7 @@ depth: 1
  * Increase the read buffer size to improve efficiency and performance when generating file hashes for document or image uploads, use `hashlib.file_digest` if available (Python 3.11+) (Jake Howard)
  * API ordering now [supports multiple fields](api_v2_usage_ordering) (Rohit Sharma, Jake Howard)
  * Pass block value to `Block.get_template` to allow varying template based on value (Florian Delizy)
+ * Add [`InlinePanel` DOM events](inline_panel_events) for when ready and when items added or removed (Faishal Manzar)
 
 ### Bug fixes
 
