@@ -41,6 +41,7 @@ Changelog
  * Increase the read buffer size to improve efficiency and performance when generating file hashes for document or image uploads, use `hashlib.file_digest` if available (Python 3.11+) (Jake Howard)
  * API ordering now supports multiple fields (Rohit Sharma, Jake Howard)
  * Pass block value to `Block.get_template` to allow varying template based on value (Florian Delizy)
+ * Add `InlinePanel` DOM events for when ready and when items added or removed (Faishal Manzar)
  * Fix: Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
  * Fix: Avoid an error when the moderation panel (admin dashboard) contains both snippets and private pages (Matt Westcott)
  * Fix: When deleting collections, ensure the collection name is correctly shown in the success message (LB (Ben) Johnston)
